# multics-mimetypes

./: CMakeLists.txt  README.md  multics-mime.xml
